# blk

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: binary.rst  binary_blk_files.rst  conf.py  index.rst  section.rst  text.rst
docs/source/diagrams/: block_info.drawio  fat.drawio  fat_zst.drawio  names.drawio  names_container.drawio  names_container_dump.drawio  names_dump.drawio  nm.drawio  nm_dump.drawio  parameter_info.drawio  section_fat.drawio  section_fat_block_info_array_dump.drawio  section_fat_blocks_tree.drawio  section_fat_dump.drawio  section_fat_param_info_array_and_params_data_dump.drawio  section_fat_zst_dump.drawio  section_slim_dump.drawio  section_slim_param_info_array_and_params_data_dump.drawio  section_slim_zst_dict_dump.drawio  section_slim_zst_dump.drawio  slim.drawio  slim_zst.drawio  slim_zst_dict.drawio  tagged_index.drawio  (+1 more)
lang/russian/: README.md
src/blk/: __init__.py  format.py  types.py
src/vromfs/: constructor.py
tests/: conftest.py
tests/demo/: blk_unpack_demo.py  blk_unpack_demo_mp.py  show_unpack_call.py  test_find_nm.py  test_is_text.py
tests/helpers/: __init__.py  make_bin_samples.py  make_samples.py
tests/samples/: names_cintainer.tags  names_container  nm  nm.tags  section.py  section_bbf.blk  section_fat.blk  section_fat.tags  section_fat_s.blk  section_fat_zst.blk  section_slim.blk  section_slim_zst.blk  section_slim_zst_dict.blk  section_strict.blk  section_txt.blk
tests/test_blk/: conftest.py
(+177 files in other folders)
