[metadata]
name = blk
author = kotiq
author_email = courier.yeti@gmail.com
url = https://github.com/kotiq/blk

[options]
python_requires = >= 3.7
package_dir=
    =src
packages=find:

install_requires =
    construct==2.9.44
    parsy @ git+https://github.com/python-parsy/parsy.git
    zstandard==0.15.1

[options.packages.find]
where=src
